<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.ygs.android.yigongshe.view.CommonTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        titlebar:centerType="textView"
        titlebar:leftDrawable="@drawable/arrow_back"
        titlebar:leftType="imageButton"
        titlebar:rightType="textView"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/login_login_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="@color/gray1"
        android:textSize="24dp"
        app:layout_constraintTop_toBottomOf="@id/titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/phone_num"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="13dp"
            android:background="@drawable/register_round_bg"
            android:hint="@string/input_phone_hint"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black1"
            android:textColorHint="@color/gray4"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/captcha"
            android:textColor="@color/gray2"
            android:textSize="12dp" />


        <EditText
            android:id="@+id/password_captcha_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/register_round_bg"
            android:hint="@string/input_captcha_hint"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textColor="@color/black1"
            android:textColorHint="@color/gray4"
            android:textSize="12dp" />

        <Button
            android:id="@+id/send_captcha_btn"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:background="@drawable/round_btn_shape"
            android:text="@string/send_captcha"
            android:textColor="@color/white"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="7dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/new_password"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/new_password_et"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="13dp"
            android:background="@drawable/register_round_bg"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black1"
            android:textColorHint="@color/gray4"
            android:textSize="12dp" />


    </LinearLayout>

    <Button
        android:id="@+id/change_password_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_btn_shape"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="15dp" />

</LinearLayout>