<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <com.ygs.android.yigongshe.view.CommonTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titlebar:centerText="@string/change_password"
        titlebar:centerType="textView"
        titlebar:leftDrawable="@drawable/arrow_back"
        titlebar:leftType="imageButton"></com.ygs.android.yigongshe.view.CommonTitleBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:textSize="12dp"
            android:textColor="@color/gray2"
            android:text="@string/password3"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/change_password_et"
            android:hint="@string/input_password_hint"
            android:textSize="12dp"
            android:textColor="@color/black1"
            android:textColorHint="@color/gray4"
            android:inputType="textPassword"
            android:layout_marginLeft="13dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/apply_round_bg"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="7dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:textSize="12dp"
            android:textColor="@color/gray2"
            android:text="@string/reinput_password"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/re_password_et"
            android:hint="@string/reinput_password_hint"
            android:textSize="12dp"
            android:textColor="@color/black1"
            android:textColorHint="@color/gray4"
            android:inputType="textPassword"
            android:layout_marginLeft="13dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/apply_round_bg"/>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_btn_shape"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/submit"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:id="@+id/change_password_btn"/>

</LinearLayout>