<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.ygs.android.yigongshe.view.CommonTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titlebar:centerText="@string/change_nickname"
        titlebar:centerType="textView"
        titlebar:leftDrawable="@drawable/arrow_back"
        titlebar:leftType="imageButton"></com.ygs.android.yigongshe.view.CommonTitleBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="@color/black1"
            android:text="@string/nickname2"
            android:textSize="12dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/change_nickname_et"
            android:hint="@string/input_nickname"
            android:textSize="12dp"
            android:layout_marginLeft="13dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/apply_round_bg"/>
    </LinearLayout>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_btn_shape"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/submit"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:id="@+id/change_nickname_btn"/>


</LinearLayout>