<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.ygs.android.yigongshe.view.CommonTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titlebar:centerText="@string/change_phone"
        titlebar:centerType="textView"
        titlebar:leftDrawable="@drawable/arrow_back"
        titlebar:leftType="imageButton"></com.ygs.android.yigongshe.view.CommonTitleBar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone_tip_tv"
        android:layout_marginTop="27dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="14dp"
        android:textColor="@color/gray1"
        android:text="tip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cell_phone_2"
            android:textSize="13dp"
            android:textColor="@color/black1"
            android:layout_gravity="center_vertical"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/apply_round_bg"
            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:hint="@string/input_phone_hint"
                android:textSize="13dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@id/countdown_tv"
                android:layout_marginRight="10dp"
                android:id="@+id/phone_et"
                android:inputType="phone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/countdown_tv"
                android:textSize="10dp"
                android:textAlignment="center"
                android:paddingHorizontal="7dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:text="@string/input_captcha_2_hint"
                android:gravity="center"
                android:background="@drawable/bg_countdown_timer"
                android:textColor="@color/white"
                />

        </RelativeLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/captcha_code"
            android:textColor="@color/black1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/input_captcha_hint"
            android:textSize="13dp"
            android:id="@+id/input_captcha_et"
            android:background="@drawable/apply_round_bg"
            android:inputType="number"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_btn_shape"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/submit"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:id="@+id/change_phone_btn"/>


</LinearLayout>