<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.ygs.android.yigongshe.view.CommonTitleBar
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            titlebar:leftDrawable="@drawable/arrow_back"
            titlebar:leftType="imageButton"
            titlebar:rightType="textView"
            titlebar:rightText="@string/login"
            titlebar:rightTextColor="@color/green"
            titlebar:rightTextSize="12dp"
            ></com.ygs.android.yigongshe.view.CommonTitleBar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black1"
            android:textSize="22dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_num"
                android:textAlignment="textEnd"
                android:textColor="@color/gray2"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/register_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/register_round_bg"
                android:hint="@string/input_phone_hint"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:textColor="@color/black1"
                android:textColorHint="@color/gray4"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/user_type"
                android:textAlignment="textEnd"
                android:textSize="12dp" />

            <Spinner
                android:id="@+id/register_usertype_sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@drawable/register_round_bg"
                android:hint="@string/user_type"
                android:inputType="text"
                android:paddingBottom="0dp"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:paddingTop="0dp"
                android:textColor="@color/black1"
                android:textColorHint="@color/gray4"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/school"
                android:textAlignment="textEnd"
                android:textColor="@color/gray2"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/register_school_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/register_round_bg"
                android:hint="@string/input_school_hint"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/black1"
                android:textColorHint="@color/gray4"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/academy"
                android:textAlignment="textEnd"
                android:textColor="@color/gray2"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/register_academy_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/register_round_bg"
                android:hint="@string/input_academy_hint"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/black1"
                android:textColorHint="@color/gray4"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/enroll_year"
                android:textAlignment="textEnd"
                android:textColor="@color/gray2"
                android:textSize="12dp" />

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp">

                <EditText
                    android:id="@+id/register_enroll_year_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/register_round_bg"
                    android:hint="@string/input_enroll_year_hint"
                    android:inputType="date"
                    android:paddingStart="10dp"
                    android:textColor="@color/black1"
                    android:textColorHint="@color/gray4"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/register_calendar_btn"
                    android:layout_width="20dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/calendar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/register_enroll_year_et"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/captcha"
                android:textAlignment="textEnd"
                android:textColor="@color/gray2"
                android:textSize="12dp" />

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp">

                <EditText
                    android:id="@+id/register_captcha_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/register_round_bg"
                    android:hint="@string/input_captcha_hint"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textColor="@color/black1"
                    android:textColorHint="@color/gray4"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/send_captcha_btn"
                    android:layout_width="70dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/round_btn_shape"
                    android:text="@string/send_captcha"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    app:layout_constraintBottom_toBottomOf="@id/register_captcha_et"
                    app:layout_constraintEnd_toEndOf="@id/register_captcha_et"
                    app:layout_constraintTop_toTopOf="@id/register_captcha_et" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/invite_code"
                android:textAlignment="textEnd"
                android:textColor="@color/gray2"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/register_invite_et"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/register_round_bg"
                android:hint="@string/input_optional_hint"
                android:inputType="text"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:textColor="@color/black1"
                android:textColorHint="@color/gray4"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="textEnd"
                android:textColor="@color/gray2"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/register_password_et"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/register_round_bg"
                android:hint="@string/input_password_hint"
                android:inputType="text"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:textColor="@color/black1"
                android:textColorHint="@color/gray4"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/reinput_password"
                android:textAlignment="textEnd"
                android:textColor="@color/gray2"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/register_reinput_password_et"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/register_round_bg"
                android:hint="@string/reinput_password_hint"
                android:inputType="text"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:textColor="@color/black1"
                android:textColorHint="@color/gray4"
                android:textSize="12dp" />
        </LinearLayout>


        <Button
            android:id="@+id/register_register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>
</ScrollView>
